--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,22 @@
-# Folder archives
+# Caches #
 _*
 _*/
 
-# Folder config file
+# Folder config file #
 desktop.ini
 
-# Recycle Bin used on file shares
+# Recycle Bin used on file shares #
 $RECYCLE.BIN/
 
-# Windows image file caches
+# Windows image file caches #
 thumbs.db
 ehthumbs.db
 
-# Windows Installer files
+# Windows Installer files #
 *.cab
 *.msi
 *.msm
 *.msp
 
-# Windows shortcuts
+# Windows shortcuts #
 *.lnk
-
-# Wordpress caches
-*.log
-
-# Wordpress config file
-wp-config.php
